<resources>
    <string name="app_name">NoticesApp</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- navigation strings -->
    <string name="nav_announcements">Announcements</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_admins">People</string>
    <string name="nav_co_workers">Co-Workers</string>
    <string name="nav_chat">Chats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_utilities">Utilities</string>
    <string name="nav_communicate">Communicate</string>
    <!-- end navigation strings -->

    <!-- error strings -->
    <string name="error_authentication">Authentication Failed</string>
    <string name="error_field_required">Field Required</string>
    <!-- end error strings -->

    <!-- hint string -->
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_username">Enter username</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_enter_display_name">Enter display name</string>
    <!-- end hint string -->

    <!-- button texts strings -->
    <string name="button_signup">Signup</string>
    <string name="button_signin">Signin</string>
    <!-- end  text strings -->

    <!-- loading strings -->
    <string name="loading_login">Requesting login, Please wait</string>
    <string name="loading_data">Loading data, Please wait.</string>
    <string name="loading_register">Registering information, Please wait.</string>
    <!-- end loading strings -->

    <!-- menu strings -->
    <string name="menu_search">Search</string>
    <string name="action_search">Search</string>
    <!-- end menu strings -->

    <!-- toast strings -->
    <string name="info_exit_app">Please press back again to exit</string>
    <string name="info_result_found">Result found</string>
    <string name="info_bye">See you later</string>
    <string name="info_registration_success">Registered successfully</string>
    <string name="info_login_success">Login successfully</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="error_illegal_entry">Illegal activity entry, closing this</string>
    <string name="info_same_user">This user is you, please select another</string>
    <!-- end toast strings -->
</resources>
