<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_announcements"
            android:icon="@mipmap/ic_report_black_24dp"
            android:title="@string/nav_announcements" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_person_outline_black_24dp"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_admins"
                android:icon="@mipmap/ic_supervisor_account_black_24dp"
                android:title="@string/nav_admins" />
        </menu>
    </item>

    <item android:title="@string/nav_utilities">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_build_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_power_black_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
